--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,11 @@ input[type="button"]  {
     font-family: sans-serif;
 }
 
+ul {
+    text-align: center;
+    list-style-position: inside;
+}
+
 body {
     text-align: center;
 }
